--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -29,3 +30,4 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
+        pytest tests/
