--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -31,3 +31,9 @@ jobs:
       run: |
         pip install pytest
         pytest tests/
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v1
+      with:
+        name: test-artifact
+
+
