--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -16,10 +16,15 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Create Artifact Directory
+        run: mkdir -p artifacts/
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Setup environment
+      env:
+        stock_api_key: ${{ secrets.stock_api_key }}
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -31,8 +36,6 @@ jobs:
       run: |
         pip install pytest
         pytest tests/
-    - name: Create Artifact Directory
-      run: mkdir -p artifacts/
     - name: Upload Artifact
       uses: actions/upload-artifact@v1
       with:
