--- a/.github/workflows/masterdeployment.yml
+++ b/.github/workflows/masterdeployment.yml
@@ -12,6 +12,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - name: Install Node.js
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+      - name: Install npm dependencies
+        run: npm install
+      - name: Run build task
+        run: npm run build --if-present
       - name: Deploy to staging server
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
