--- a/.github/workflows/masterdeployment.yml
+++ b/.github/workflows/masterdeployment.yml
@@ -24,3 +24,6 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          ARGS: "-rltgoDzvO"
+          SOURCE: "dist/"
+          TARGET: /home/kafka/
