--- a/.github/workflows/masterdeployment.yml
+++ b/.github/workflows/masterdeployment.yml
@@ -25,5 +25,5 @@ jobs:
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           ARGS: "-rltgoDzvO"
-          SOURCE: "dist/"
-          TARGET: /home/github/
+          SOURCE: "run/"
+          TARGET: "/home/github/"
