--- a/.github/workflows/masterdeployment.yml
+++ b/.github/workflows/masterdeployment.yml
@@ -24,6 +24,8 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: ${{ secrets.REMOTE_TARGET }}
           ARGS: "-rltgoDzvO"
           SOURCE: "run/"
-          TARGET: "/home/github/"
+          
+          
