--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -31,7 +31,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       env:
-        stock_api_key: ${{ secrets.stock_api_key }}
+        stock_api_key: ${{ secrets.STOCK_API_KEY }}
       run: |
         pip install pytest
         pytest tests/
