Added tests for Webhook_Server

--- a/.github/workflows/developmenttests.yml
+++ b/.github/workflows/developmenttests.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - development
+      - webhook_server
 
 jobs:
   build:
@@ -44,5 +45,3 @@ jobs:
       with:
         name: test-artifact
         path: artifacts/
-
-
